app/src/main/java/com/example/bookclub/errors/MessageCreateBadRequestException.java
package com.example.bookclub.errors;

public class MessageCreateBadRequestException extends RuntimeException {
	public MessageCreateBadRequestException() {
		super("message create bad request");
	}
}
